--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -20,6 +20,7 @@
                 </div>
                 <div>
                     <button [disabled]="loading" class="btn btn-primary">
+                        Login
                         <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
                     </button>
                     <a routerLink="../register" class="btn btn-link">Register</a>
