--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,5 +1,6 @@
 <div class="container col-md-6 offset-md-3 mt-5">
     <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+    <div *ngIf="success" class="alert alert-success">{{success}}</div>
     <div class="card">
         <div class="card-header">Login</div>
         <div class="card-body">
